Fixed bullets, line spacing, hr, print page break

--- a/css/print.css
+++ b/css/print.css
@@ -30,33 +30,31 @@
 	}
 
 	h1{
-		font-family: "Helvetica Neue", Arial, sans-serif;
+		font-family: "Futura", "Helvetica Neue", sans-serif;
 		font-size: 3em;
-		color: orange;
-		padding-bottom: 0.5em;
+		margin-bottom: 1em;
 	} 
 
-	h2, h3{
+	h2{
+		font-family: "Futura", "Helvetica Neue", sans-serif;
+	}
+
+	h3{
 		font-family: Georgia, "Times New Roman", serif;
 	}		
 	
 	h2{
 		letter-spacing: 0.05em;
-		color: #5CCCCC;
 		padding: 0;
 		margin: 0;
 	}
-
-	h3{
-		color: orange;
-	}
-
-	img{
-		display: none;
-	}
 	
-	nav, footer{
+	img, nav, footer{
 		display: none;
+	}
+
+	hr{
+		margin-bottom: 1.5em;
 	}
 
 	a[href^="http"]:after {
@@ -68,13 +66,13 @@
 		font-weight: bold;
 	}
 
-	hr{
-		display: none;
-	}
-
 	#container{
 		margin: 1.5em auto;
 		max-width: 90%
+	}
+
+	#newpg{
+		page-break-before: always;
 	}
 
 }
