--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,13 @@ p, h1, h2, h3{
 	margin: 0;
 }
 
-ul, li{
+ul{
 	padding-top: 0em;
 	margin-top: 0em;
+}
+
+li{
+	line-height: 1.4em;
 }
 
 section p:last-child{
@@ -107,46 +111,21 @@ h3{
 	color: orange;
 }
 
-#about{
-	font-size: 2em;
+#head{
+	font-size: 2.2em;
 	letter-spacing: 0.05em;
 	color: #5CCCCC;
-}
-
-#intro{
-	font-size: 1.25em;
-	text-align: center;
-	padding-top: 0.2em;
-	padding-bottom: 0.2em;
-	margin-left: 3em;
-	margin-right: 3em;
-	margin-bottom: 1.5em;
-	border-top: 2px dashed #ccc;
-	border-bottom: 2px dashed #ccc;
 }
 
 img{
 	display: inline;
 	float: left;
 	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 	margin-right: 1em;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
-	padding-right: 0.5em;
-	padding-left: 0.5em;
+	padding: 0.5em;
 	background-color: white;
 	border: black 1px solid;
-}
-
-.block{
-	display: block;
-	float: none;
-}
-
-.photo{
-	max-width: 560px;
-	padding-bottom: 1.5em;
 }
 
 section ul{
@@ -180,8 +159,14 @@ article{
 	margin: 0em;
 }
 
-article a:hover{
-	font-style: dotted;
+#topborder{
+	padding-top: 0.5em;
+	border-top: 3px solid #ccc;
+
+}
+
+.break{
+	clear: both;
 }
 
 footer{
@@ -193,4 +178,8 @@ footer{
 	color: white;
 	display: block;
 	clear: both;
+}
+
+hr{
+	display: none;
 }
